--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-css": "^1.0.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "cookieconsent": "^3.1.1",
     "es6-promise": "^4.2.6",
     "express": "^4.16.4",
     "google-map-react": "^1.1.4",
