--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixelstocode",
+  "name": "start-p",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,51 +9,51 @@
     "start": "NODE_ENV=production node server.js -p $PORT"
   },
   "engines": {
-    "node": "12.12.0",
-    "npm": "6.11.3"
+    "node": "8.9.3",
+    "npm": "5.5.1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-css": "1.0.1",
-    "body-parser": "1.18.3",
-    "bootstrap": "4.3.1",
-    "cookieconsent": "3.1.1",
-    "es6-promise": "4.2.6",
-    "express": "4.16.4",
-    "google-map-react": "1.1.4",
-    "imagemin-gifsicle": "6.0.1",
-    "imagemin-mozjpeg": "8.0.0",
-    "imagemin-optipng": "6.0.0",
-    "imagemin-svgo": "7.0.0",
-    "isomorphic-fetch": "2.2.1",
-    "next": "8.0.4",
-    "next-compose-plugins": "2.1.1",
-    "next-fonts": "0.17.0",
-    "next-i18next": "0.37.0",
-    "next-images": "1.1.1",
-    "next-optimized-images": "2.4.0",
-    "nodemailer": "6.1.0",
-    "nodemailer-sendgrid-transport": "0.2.0",
-    "react": "16.8.6",
-    "react-accessible-accordion": "3.0.0",
-    "react-dom": "16.8.6",
-    "react-feather": "1.1.6",
-    "react-ga": "2.7.0",
-    "react-google-maps": "9.4.5",
-    "react-image-lightbox": "5.1.0",
-    "react-modal-video": "1.2.1",
-    "react-no-ssr": "1.1.0",
-    "react-odometerjs": "2.1.1",
-    "react-owl-carousel3": "2.2.5",
-    "react-preloading-screen": "1.0.2",
-    "react-slick": "0.23.2",
-    "react-wow": "1.0.0",
-    "svg-sprite-loader": "4.1.3",
-    "webp-loader": "0.4.0"
+    "@zeit/next-css": "^1.0.1",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
+    "cookieconsent": "^3.1.1",
+    "es6-promise": "^4.2.6",
+    "express": "^4.16.4",
+    "google-map-react": "^1.1.4",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^8.0.4",
+    "next-compose-plugins": "^2.1.1",
+    "next-fonts": "^0.17.0",
+    "next-i18next": "^0.37.0",
+    "next-images": "^1.1.1",
+    "next-optimized-images": "^2.4.0",
+    "nodemailer": "^6.1.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "react": "^16.8.6",
+    "react-accessible-accordion": "^3.0.0",
+    "react-dom": "^16.8.6",
+    "react-feather": "^1.1.6",
+    "react-ga": "^2.7.0",
+    "react-google-maps": "^9.4.5",
+    "react-image-lightbox": "^5.1.0",
+    "react-modal-video": "^1.2.1",
+    "react-no-ssr": "^1.1.0",
+    "react-odometerjs": "^2.1.1",
+    "react-owl-carousel3": "^2.2.5",
+    "react-preloading-screen": "^1.0.2",
+    "react-slick": "^0.23.2",
+    "react-wow": "^1.0.0",
+    "svg-sprite-loader": "^4.1.3",
+    "webp-loader": "^0.4.0"
   },
   "devDependencies": {
-    "webpack": "4.29.6"
+    "webpack": "^4.29.6"
   }
 }
