--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-css": "1.0.1",
     "body-parser": "1.18.3",
     "bootstrap": "4.3.1",
     "cookieconsent": "3.1.1",
@@ -55,6 +54,8 @@
     "webp-loader": "0.4.0"
   },
   "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "next-purgecss": "^4.0.0",
     "webpack": "4.29.6"
   }
 }
