--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.0.1",
     "body-parser": "1.18.3",
     "bootstrap": "4.3.1",
     "cookieconsent": "3.1.1",
+    "dotenv": "^8.2.0",
     "es6-promise": "4.2.6",
     "express": "4.16.4",
     "google-map-react": "1.1.4",
@@ -28,7 +30,7 @@
     "imagemin-optipng": "6.0.0",
     "imagemin-svgo": "7.0.0",
     "isomorphic-fetch": "2.2.1",
-    "next": "8.0.4",
+    "next": "^8.0.4",
     "next-compose-plugins": "2.1.1",
     "next-fonts": "0.17.0",
     "next-i18next": "0.37.0",
