--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "node server.js -p $PORT",
     "build": "next build",
+    "dev2": "next dev",
     "start": "NODE_ENV=production node server.js -p $PORT"
   },
   "engines": {
