--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.0.1",
+    "@sendgrid/mail": "7.0.1",
     "body-parser": "1.18.3",
     "bootstrap": "4.3.1",
     "cookieconsent": "3.1.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "es6-promise": "4.2.6",
     "express": "4.16.4",
+    "fs": "0.0.1-security",
     "google-map-react": "1.1.4",
     "googleapis": "^48.0.0",
     "imagemin-gifsicle": "6.0.1",
