--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "7.0.1",
+    "@sendgrid/mail": "^7.0.1",
     "body-parser": "1.18.3",
     "bootstrap": "4.3.1",
     "cookieconsent": "3.1.1",
@@ -59,6 +59,6 @@
   "devDependencies": {
     "@zeit/next-css": "^1.0.1",
     "next-purgecss": "^4.0.0",
-    "webpack": "4.29.6"
+    "webpack": "^4.29.6"
   }
 }
