--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-ga": "2.7.0",
     "react-google-maps": "9.4.5",
     "react-image-lightbox": "5.1.0",
+    "react-messenger-customer-chat": "^0.7.2",
     "react-modal-video": "1.2.1",
     "react-no-ssr": "1.1.0",
     "react-odometerjs": "2.1.1",
